--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -31,7 +31,7 @@ position: absolute;
 }
 
 /* Select the image that has an alt attribute value matching "Kitty 5" (using attribute selector) */
-img[alt="kitty 5"]{
+img[alt="Kitty 5"]{
   position: absolute;
   z-index: 3;
   top: 217px;
